# Juno

./: .cursorignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: juno_implementation_264f646d.plan.md  juno_refactor_plan_23504699.plan.md
assistants/: mercury.md  mercury.yaml
config/: juno.identity.yaml  juno.identity.yaml.example  juno.supervisor.md
docs/: subagents.md
src/juno/: __init__.py  approval_markers.py  identity.py  logging_config.py  plugins.py  settings.py
src/juno/agents/: __init__.py  build_mercury_subagent.py  build_supervisor.py  memory.py  mercury_payload.py  registry.py  remote_guide_middleware.py  state.py
src/juno/assistants/: __init__.py  loader.py  mercury_runner.py  protocol.py
src/juno/llm/: __init__.py  factory.py
src/juno/memory/: __init__.py  profile.py  store.py
src/juno/runtime/: __init__.py  checkpointer.py  factory.py  mercury_graph_runtime_factory.py
src/juno/telegram/: __init__.py  __main__.py  approval_state.py  approval_ui.py  bot.py  errors.py  formatting.py  handlers.py  messages.py  parsing.py  session.py  turn.py
tests/: test_agents.py  test_approval_state.py  test_llm_factory.py  test_loaders.py  test_logging_config_levels.py  test_long_term_memory.py  test_mercury.py  test_mercury_invoke_payload.py  test_mercury_local_runner.py  test_mercury_package_import.py  test_mercury_runner_mode.py  test_plugins.py  test_runtime_checkpointer.py  test_runtime_factory.py  test_settings_mercury_env.py  test_telegram_bot.py  test_telegram_errors.py  test_telegram_formatting.py
(+3 files in other folders)
