[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juno"
version = "0.1.0"
description = "Telegram-first LangChain supervisor with Mercury assistant runners"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langgraph",
    "langsmith>=0.7",
    "httpx",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv>=1",
    "pyyaml",
    "langchain-openai",
    "langchain-groq",
    "python-telegram-bot>=21",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/juno"]

[tool.hatch.build.targets.sdist]
include = ["src/juno/**/*", "README.md"]

[project.scripts]
juno-telegram = "juno.telegram.bot:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
